gbs/css/style.css
/* ... */
.products-name{
    position: absolute;
    top:65%;
    left: 43%;
    font-family: Lemon;
    font-style: normal;
    font-weight: normal;
    font-size: 40px;
    line-height: 28px;
    text-align: center;
    color: #EEC067;
}

.gbs-tech-img-wrapper{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding-top: 50px;
    padding-bottom: 50px;
}
.gbs-tech-img{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-item-align: center;
    align-self: center;
}
.gbs-patents-brands{
    padding-left:8rem;
    padding-right:8rem;
    padding-top:45px;
    padding-bottom:45px;
    overflow: hidden;
    background-color: #D7D7D7;
}
.gbs-patents-brands-wrapper{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
.gbs-patents-brand{
    width: 234px;
    height: 127px;
    margin-left: 17px;
    margin-right: 17px;
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
.gbs-patents-brand p{
    font-style: italic;
    font-weight: bold;
    font-size: 24px;
    line-height: 37px;
    text-align: center;
    color: #FFFFFF;
}
.gbs-patents-brand1{
    background: -webkit-gradient(linear, left bottom, left top, from(rgba(6, 121, 227, 0.5)), to(rgba(6, 121, 227, 0.5))), url(../img/brand1.jpg);
    background: -webkit-linear-gradient(bottom, rgba(6, 121, 227, 0.5), rgba(6, 121, 227, 0.5)), url(../img/brand1.jpg);
    background: -o-linear-gradient(bottom, rgba(6, 121, 227, 0.5), rgba(6, 121, 227, 0.5)), url(../img/brand1.jpg);
    background: linear-gradient(0deg, rgba(6, 121, 227, 0.5), rgba(6, 121, 227, 0.5)), url(../img/brand1.jpg);
    overflow: hidden;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 0%;
}
.gbs-patents-brand2{
    background: -webkit-gradient(linear, left bottom, left top, from(rgba(241, 186, 82, 0.5)), to(rgba(241, 186, 82, 0.5))),  url(../img/brand2.jpg);
    background: -webkit-linear-gradient(bottom, rgba(241, 186, 82, 0.5), rgba(241, 186, 82, 0.5)),  url(../img/brand2.jpg);
    background: -o-linear-gradient(bottom, rgba(241, 186, 82, 0.5), rgba(241, 186, 82, 0.5)),  url(../img/brand2.jpg);
    background: linear-gradient(0deg, rgba(241, 186, 82, 0.5), rgba(241, 186, 82, 0.5)),  url(../img/brand2.jpg);
    overflow: hidden;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 0%;
}
.gbs-patents-brand3{
    background: -webkit-gradient(linear, left bottom, left top, from(rgba(50, 50, 50, 0.5)), to(rgba(50, 50, 50, 0.5))), url(../img/brand3.jpg);
    background: -webkit-linear-gradient(bottom, rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url(../img/brand3.jpg);
    background: -o-linear-gradient(bottom, rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url(../img/brand3.jpg);
    background: linear-gradient(0deg, rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url(../img/brand3.jpg);
    overflow: hidden;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 0%;
}
.team-wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}
.team-card{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 315px;
    width: 50%;
}
.team-card:first-child{
    margin-right: 10px;
}
.team-card:last-child{
    margin-left: 10px;
}
.team-card img{
    width: 194px;
    height: 315px;
}

.team-description{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    background: #DFDFDF;
    padding:20px;
}
.team-description h6{
    font-style: normal;
    font-weight: normal;
    font-size: 18px;

}
.team-description p span{
    font-style: italic;
    font-size: 12px;

}
.team-description p{
    font-weight: 300;
    font-size: 12px;
    line-height: 18px;
    margin-bottom: 7px;
}
.team-consultant-wrapper{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding-top:80px;
    padding-bottom:80px;
}
.team-consultant-h1{
    margin-left: 30px;
}

.gbs-content-column{
    padding-top:45px;
    padding-bottom:70px;
    padding-left:8rem;
    padding-right:8rem;
    overflow: hidden;
}
.media__img{
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 20px;

}
.compensate-for-scrollbar {
    margin-right: 0px !important;
}
.final__slide{
    position: relative;
    display: inline-block;
    overflow: hidden;
}
.final__slide img{
    display: inline-block;
    vertical-align: middle;
}
.final__slide-content{
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom:0;
    width:100%;
    height: 100%;
    z-index: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding:20px;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    background-color:  rgba(6, 121, 227, .75);
    color: #ffffff;
    transition: transform 0.3s ease;
    -webkit-transition: transform 0.3s ease;
}
.final__slide:hover .final__slide-content{
    transform:translate(0, 0);
    -webkit-transform:translate(0, 0);
}
/* ... */

